# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.528 2006/01/26 15:36:46 wolf31o2 Exp $

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  It helps if I actually increment the version number.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh:
  Added --oneshot to default options for stage1 building. Added code to wipe
  world during stages 1 and 3. This is catalyst 2.0_rc22.

  25 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
  Fix bug if no kernel packages were defined but there was a postconf setting.
  x86 softlevel support is enhanced.

  24 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/bootloader-setup.sh:
  Added IA64 patch from plasmaroo.  This is catalyst 2.0_rc21.

  23 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Changed mcpu to mtune since mcpu is deprecated on GCC 3.4 and above.

  20 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc20.

  20 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/netboot2_target.py:
  Netboot2 fixes for spec parameter checks

  20 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py:
  add makeopts spec file support.

  20 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added fix for bug #119635.

  19 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  Fix pre-kmerge.sh for stage4

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc19.

  18 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix crash when no kernel is defined.  spacing issue

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc18.
