@@ -1,5 +1,14 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.528 2006/01/26 15:36:46 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.529 2006/01/26 19:56:32 rocket Exp $
+
+  26 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  examples/generic_stage_template.spec, examples/grp_template.spec,
+  examples/livecd-stage1_template.spec,
+  examples/livecd-stage2_template.spec, examples/netboot2_template.spec,
+  examples/netboot_template.spec, examples/stage4_template.spec,
+  examples/tinderbox_template.spec, modules/generic_stage_target.py,
+  targets/support/kmerge.sh:
+  Separation of kerncache from snapcache
 
   26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   It helps if I actually increment the version number.
